--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Journal App</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
+    />
+
   </head>
   <body>
     <div id="root"></div>
